# NavOS_ADA

./: LICENSE  README.md  build_ws.sh  cheatsheet.md  day1sum.md  install_env.sh
map/: map.pcd
src/ada/: CMakeLists.txt  package.xml
src/ada/launch/: ada_system.launch.py  docker-compose.yml  f1tenth_entrypoint.sh  perception_entrypoint.sh  start.sh
src/control_center/: CMakeLists.txt  package.xml
src/control_center/src/: control_center_node.cpp
src/lidar_localization_ros2/: CMakeLists.txt  README.md
src/lidar_localization_ros2/include/lidar_localization/: lidar_localization_component.hpp  lidar_localization_component.hpp.orig
src/lidar_localization_ros2/launch/: lidar_localization.launch.py
src/lidar_localization_ros2/param/: localization.yaml
src/lidar_localization_ros2/rviz/: localization.rviz  localization_orig.rviz
src/lidar_localization_ros2/src/: lidar_localization_component.cpp
src/lidarslam_ros2/.github/workflows/: main.yml
src/lidarslam_ros2/graph_based_slam/: CMakeLists.txt
src/lidarslam_ros2/lidarslam/: CMakeLists.txt
src/lidarslam_ros2/lidarslam/launch/: lidarslam.launch.py
src/lidarslam_ros2/lidarslam/param/: lidarslam.yaml
src/lidarslam_ros2/lidarslam/rviz/: mapping.rviz
src/lidarslam_ros2/scanmatcher/: CMakeLists.txt
src/lidarslam_ros2/scanmatcher/src/: scanmatcher_component.cpp
src/perception/: package.xml  setup.py
src/perception/perception/: perception_node.py
src/perception/util/: attach_to_container.sh  run_container.sh  sample_inference.py  setup.sh
src/pure_pursuit_controller/: CMakeLists.txt  README.md  package.xml
src/pure_pursuit_controller/config/: pure_pursuit_params.yaml
src/pure_pursuit_controller/include/pure_pursuit_controller/: pure_pursuit_controller.hpp
src/pure_pursuit_controller/launch/: path_loader.launch.py  pure_pursuit.launch.py  pure_pursuit_system.launch.py  waypoint_recorder.launch.py
src/pure_pursuit_controller/scripts/: stop_sign_control_node.py
src/pure_pursuit_controller/src/: emergency_braker.cpp  path_loader.cpp  pure_pursuit_controller.cpp  pure_pursuit_main.cpp  waypoint_recorder.cpp
src/util/: package.xml  setup.cfg  setup.py
src/util/launch/: sensor_transform_launch.py
src/util/util/: imu_transformer_node.py  lidar_transformer_node.py  lidar_transformer_norotate_node.py
waypoints/: waypoints-old.yaml  waypoints.yaml
