<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ada</name>
  <version>0.0.0</version>
  <description>Ada autonomous driving system integration package</description>
  <maintainer email="ada@todo.todo">ada</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <exec_depend>sllidar_ros2</exec_depend>
  <exec_depend>lidar_localization_ros2</exec_depend>
  <exec_depend>util</exec_depend>
  <exec_depend>control_center</exec_depend>
  <exec_depend>rviz2</exec_depend>
  
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package> 